// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`промка в тултипе нарисует промо тултип 1`] = `
<div
  className="SalesChart__promoTooltip"
>
  <IconSvg
    className="SalesChart__viewsGrowthIcon"
    id="svgID"
    size="16"
  />
  <span>
    Поднять
  </span>
  <div
    className="SalesChart__promoTooltipTail"
  />
</div>
`;

exports[`промка в тултипе нарисует промо тултип 2`] = `
Array [
  Array [
    "stats_tooltip",
    "show",
  ],
]
`;

exports[`промка в тултипе при открытии тултипа про сегодня залогирует показ кнопки 1`] = `
Array [
  Object {
    "category": "cars",
    "event": "VAS_SHOW",
    "from": "desktop-lk-tooltip",
    "offerId": "1085562758-1970f439",
    "originalPrice": undefined,
    "price": 197,
    "serviceId": "all_sale_fresh",
  },
]
`;

exports[`промка в тултипе при открытии тултипа про сегодня отправит метрику ховера на тултип 1`] = `
Array [
  Array [
    "stats_tooltip",
    "hover",
  ],
]
`;
